Hot fix: items space on mobile

--- a/src/styles/components/meeting-link-item.scss
+++ b/src/styles/components/meeting-link-item.scss
@@ -3,15 +3,26 @@
   justify-content: space-between;
   align-items: center;
   color: white;
-  padding: 1rem;
   gap: 1rem;
+  margin-bottom: 1.25rem;
   transition: background-color 0.5s ease-in, box-shadow 0.25s ease-out,
     margin 0.25s ease-out;
-  background-color: none;
 
   @media screen and (min-width: 768px) {
-    border-bottom: 1px solid #525c5b;
-    padding-bottom: 1rem;
+    padding: 1rem;
+    margin: 0;
+
+    &:not(:last-child) {
+      border-bottom: 1px solid #525c5b;
+    }
+
+    &:hover {
+      transition: background-color 0.25s ease-out, box-shadow 0.125s ease-out,
+        margin 0.125s ease-out;
+      background-color: #a9a9a91a;
+      border-bottom: 1px solid transparent;
+      box-shadow: 2px 2px 5px 1px #1d1d1d;
+    }
   }
 
   .meeting-item_left {
@@ -64,13 +75,5 @@
         color: $primary-color;
       }
     }
-  }
-
-  &:hover {
-    transition: background-color 0.25s ease-out, box-shadow 0.125s ease-out,
-      margin 0.125s ease-out;
-    background-color: #a9a9a91a;
-    border-bottom: 1px solid transparent;
-    box-shadow: 2px 2px 5px 1px #1d1d1d;
   }
 }
